After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 592885 - I can't differentiate sftp item and samba item in Nautilus Network
I can't differentiate sftp item and samba item in Nautilus Network
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: network backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
: 605216 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-08-24 11:51 UTC by harobed
Modified: 2012-09-19 08:37 UTC
See Also:
GNOME target: ---
GNOME version: 2.31/2.32


Attachments
Nautilus screenshot (30.98 KB, image/png)
2010-10-11 07:58 UTC, harobed
  Details
recent shot (60.74 KB, image/png)
2012-08-21 15:37 UTC, William Jon McCann
  Details
Append the service name when needed to help differentiate (2.89 KB, patch)
2012-08-21 18:45 UTC, William Jon McCann
none Details | Review
Append the service name when needed to help differentiate (3.11 KB, patch)
2012-08-23 22:43 UTC, William Jon McCann
committed Details | Review

Description harobed 2009-08-24 11:51:39 UTC
Hi,

Around my Ubuntu laptop (9.04) I have some Mac OSX box with ssh and samba access allowed.

When I open Nautilus Network view for each Mac OSX host, I see two access item with the same label name and icon.

I can't differentiate sftp item and samba item.

Note : I use Nautilus 2.26.2

NEED : see some information in label and icon to see what is sftp item and samba item.

Regards,
Stephane
Comment 1 Marcus Carlson 2010-07-06 20:26:11 UTC
Isn't this a gio problem as the icon is retrieved by

icon = g_mount_get_icon (mount);

?
Comment 2 Felipe Besoaín Pino 2010-08-26 17:07:20 UTC
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for.
Thanks!
Comment 3 André Klapper 2010-08-26 17:41:00 UTC
Well, NEEDINFO'ing by asking tech questions to normal users is not really useful... Reopening.

harobed, does this also still happen in 2.30?
Comment 4 Felipe Besoaín Pino 2010-10-11 02:09:16 UTC
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for.
Thanks!
Comment 5 harobed 2010-10-11 07:58:36 UTC
Created attachment 172088 [details]
Nautilus screenshot

Maybe this screenshot better explain the issue.

This issue is always available with Nautilus 2.32.0

Regards,
Stephane
Comment 6 William Jon McCann 2012-08-21 15:37:22 UTC
Created attachment 222037 [details]
recent shot

Confirmed.
Comment 7 William Jon McCann 2012-08-21 18:45:57 UTC
Created attachment 222060 [details] [review]
Append the service name when needed to help differentiate
Comment 8 Cosimo Cecchi 2012-08-21 20:02:03 UTC
Review of attachment 222060 [details] [review]:

::: daemon/gvfsbackendnetwork.c
@@ +162,3 @@
+    {
+      pretty = g_strdup (_("Remote Login"));
+

I like the idea, but shouldn't we be consistent with the strings used in the Connect to Server dialog? (i.e. showing the protocol name instead of a more generic string)
Comment 9 William Jon McCann 2012-08-21 20:21:31 UTC
No, I don't think so. I did not use the connect to server dialog. I'm browsing shares. We don't want to show geeky shit there if possible. On the Mac where I set the shares up they are called "Remote Login" and "File Sharing". These strings are only needed to differentiate items when you have multiple from a single server and are not normally used.

BTW, I think we should change the connect to server dialog too.
Comment 10 Alexander Larsson 2012-08-23 06:37:50 UTC
Review of attachment 222060 [details] [review]:

Seems like a good idea, but isn't it better to always show the service type, even if there are no conflicts?
Then if say a new one is added that conflicts you know which one is the old one as it isn't renamed.

::: daemon/gvfsbackendnetwork.c
@@ +203,3 @@
+        {
+          network_file_add_service_name (prev_file);
+          network_file_add_service_name (file);

Ís this really working for multiple conflicts? Say you have 3 Foo files. 
* foo1 gets inserted as Foo -> foo1.
* For foo2, you get a match with foo1, so you rename both, and add a Foo (2) -> foo2.
* For foo3, you get a match with foo1 (not foo2), so you rename both, and add a Foo (3) -> foo3. 
However, at this point foo1 will be called "Foo (1) (1)", will it not?
Comment 11 William Jon McCann 2012-08-23 20:35:00 UTC
I think the most common case is when there is one file sharing service per host. I don't think we need to, or want to, append the service name to the user visible name by default. The second most common case is where there are multiple file sharing services per machine but using different access methods. I'm not sure there are that many cases we care about where there are multiple instances of a specific service on a specific host. But yeah it is clearly a bug that it adds the service multiple times.

Have a corrected patch but need to head home to test it.
Comment 12 William Jon McCann 2012-08-23 22:43:46 UTC
Created attachment 222267 [details] [review]
Append the service name when needed to help differentiate

Only append the service name to the first file once. I chose not to add a
digit when there are more than two items from the same name and service because
the number actually doesn't even help you identify it.
Comment 13 Alexander Larsson 2012-08-24 07:59:39 UTC
Looks good to commit.
Comment 14 William Jon McCann 2012-09-19 08:37:24 UTC
*** Bug 605216 has been marked as a duplicate of this bug. ***