Append the service name when needed to help differentiate

https://bugzilla.gnome.org/show_bug.cgi?id=592885